<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_pwd" />
        <EditText
            android:id="@+id/editText01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:inputType="numberPassword"
            android:ems="8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pwd" />
        <EditText
            android:id="@+id/editText02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:inputType="numberPassword"
            android:ems="8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_check" />
        <EditText
            android:id="@+id/editText03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:inputType="numberPassword"
            android:ems="8" />

    </LinearLayout>

    <Button
        android:id="@+id/check_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
